--- a/index.html
+++ b/index.html
@@ -1,1 +1,29 @@
+<!DOCTYPE html>
+<html lang="id">
+<head>
+  <meta charset="UTF-8">
+  <title>Beranda - Webku</title>
+  <link rel="stylesheet" href="style.css">
+</head>
+<body>
+  <header>
+    <h1>Selamat Datang di Webku</h1>
+    <nav>
+      <a href="index.html">Beranda</a>
+      <a href="about.html">Tentang</a>
+      <a href="foto.html">Foto</a>
+      <a href="login.html">Login</a>
+    </nav>
+  </header>
+  <main>
+    <section>
+      <h2>Halo!</h2>
+      <p>Ini adalah halaman beranda dari situs web sederhana buatan saya.</p>
+    </section>
+  </main>
+  <footer>
+    <p>© 2025 Webku</p>
+  </footer>
+</body>
+</html>
 
