--- a/index.html
+++ b/index.html
@@ -7,18 +7,18 @@
 </head>
 <body>
   <header>
-    <h1>Selamat Datang di Webku</h1>
+    <h1>Selamat Datang di fardhan story</h1>
     <nav>
       <a href="index.html">Beranda</a>
       <a href="about.html">Tentang</a>
       <a href="foto.html">Foto</a>
-      <a href="login.html">Login</a>
+      
     </nav>
   </header>
   <main>
     <section>
       <h2>Halo!</h2>
-      <p>Ini adalah halaman beranda dari situs web sederhana buatan saya.</p>
+      <p>Ini adalah halaman beranda dari situs web kami.</p>
     </section>
   </main>
   <footer>
